kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
        - name: tic-tac-toe
          image: ghcr.io/mhd1324/devsecops-demo1:sha-3275ae78c02e037e0a857ccf359ba46d17b8c75f
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: github-container-registry
