kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe
spec:
  type: ClusterIP
  selector:
    app: tic-tac-toe
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
