kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
  labels:
    app.kubernetes.io/name: tic-tac-toe-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: tic-tac-toe.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tic-tac-toe
            port: 
              number: 80
